Ajout de l'api reservation

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/Release
 API_MOVIE/node_modules/
 API_USER/node_modules/
 API_CINEMA/node_modules/
+API_RESERVATION/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
