--- a/API_RESERVATION/Dockerfile
+++ b/API_RESERVATION/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:21
 
 # Créer un répertoire d'applications
-WORKDIR /API_CINEMA
+WORKDIR /API_RESERVATION
 
 # Installer les dépendances de l'application
 COPY package*.json ./
