--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,8 @@ services:
     # Autres configurations pour le service 3
     ports:
     - "3003:3003"
+  service4:
+    image: webservice-reservation:latest
+    # Autres configurations pour le service 4
+    ports:
+    - "3003:3002"
