--- a/API_RESERVATION/package.json
+++ b/API_RESERVATION/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.6.7",
+    "express": "^4.19.1",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1"
   }
